[package]
name = "Bevy_and_Egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_egui = "0.14.0"
rand = "0.8.0"
bevy_interact_2d = "0.7.0"



[patch.crates-io]
bevy_interact_2d = { git = "https://github.com/mpwsh/bevy_interact_2d", branch = "bevy-0.7-update" }
